[gd_scene load_steps=6 format=2]

[ext_resource path="res://prototype/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://prototype/Character/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://prototype/FuelLabel.gd" type="Script" id=3]
[ext_resource path="res://prototype/Character/Player/HealthLabel.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15, 25 )

[node name="Player" index="0" instance=ExtResource( 1 )]

gravity_scale = 2.0
script = ExtResource( 2 )
max_movement_speed = 800
acceleration = 2000
float_down_speed = 50
allow_jetpack = true
max_jetpack_fuel = 500
jetpack_consumption_rate = 25
jetpack_recharge_rate = 200
health_regen_per_second = 0.5

[node name="Collision" parent="." index="0"]

shape = SubResource( 1 )

[node name="ColorBox" parent="." index="1"]

margin_top = -30.0
margin_bottom = 30.0
color = Color( 0, 1, 0, 1 )

[node name="Camera" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="ui" type="CanvasLayer" parent="." index="3"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="DeathLabel" type="Label" parent="ui" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 172.0
margin_top = 124.0
margin_right = 359.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "YOU DIED
PRESS ANY KEY TO CONTINUE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FuelLabel" type="Label" parent="ui" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "FUEL: 0 / 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 3 )
_sections_unfolded = [ "Margin" ]

[node name="HealthLabel" type="Label" parent="ui" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 30.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "HP: 0 / 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )
_sections_unfolded = [ "Margin" ]

[node name="HealthRegenTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="fuel_change" from="." to="ui/FuelLabel" method="_on_Player_fuel_change"]

[connection signal="health_change" from="." to="ui/HealthLabel" method="_on_Player_health_change"]

[connection signal="timeout" from="HealthRegenTimer" to="." method="_on_health_regen"]


